<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.garbage.craftivity.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cam"
        android:name="com.garbage.craftivity.ui.cam.CamFragment"
        android:label="@string/title_cam"
        tools:layout="@layout/fragment_cam" />

    <fragment
        android:id="@+id/navigation_craft"
        android:name="com.garbage.craftivity.ui.craft.CraftFragment"
        android:label="@string/title_craft"
        tools:layout="@layout/fragment_craft" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.garbage.craftivity.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>