<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailCraftActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/image_detail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/image_craft" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/craft"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="@+id/image_photo"
                app:layout_constraintTop_toBottomOf="@+id/image_photo" />

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:text="@string/txt_craft1" />

            <TextView
                android:id="@+id/txt_desc2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_desc"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                android:text="@string/txt_craft2" />

            <TextView
                android:id="@+id/txt_desc3"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_desc2"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc2"
                android:text="@string/txt_craft3" />

            <ImageView
                android:id="@+id/image_photo2"
                android:layout_width="200dp"
                android:layout_height="615dp"
                android:contentDescription="@string/image_detail"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="@+id/txt_desc3"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc3"
                android:src="@drawable/image_craft2" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examples_of_craft"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/image_photo2"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc3"/>

            <TextView
                android:id="@+id/txt_desc4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@string/txt_craft4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_photo2"
                app:layout_constraintTop_toBottomOf="@+id/description2" />

            <TextView
                android:id="@+id/txt_desc5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@string/txt_craft5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_photo2"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc4" />

            <TextView
                android:id="@+id/txt_desc6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@string/txt_craft6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_photo2"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>