<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailCraftActivity">

    <ScrollView
        android:id="@+id/rv_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/image_detail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@color/color_primary_light" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txt_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_photo"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/txt_title"
                app:layout_constraintTop_toBottomOf="@+id/txt_title"
                tools:text="@string/author" />

            <TextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/txt_author"
                app:layout_constraintTop_toBottomOf="@+id/txt_author"
                tools:text="@string/category" />

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                app:layout_constraintBottom_toBottomOf="@+id/txt_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_title"
                tools:text="4.5" />

            <TextView
                android:id="@+id/supplies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/supplies"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/txt_category"
                app:layout_constraintTop_toBottomOf="@+id/txt_category" />

            <TextView
                android:id="@+id/txt_supplies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/supplies"
                app:layout_constraintTop_toBottomOf="@+id/supplies"
                tools:text="@string/suplies_detail" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/instruction"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/txt_supplies"
                app:layout_constraintTop_toBottomOf="@+id/txt_supplies" />

            <TextView
                android:id="@+id/txt_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/instruction"
                app:layout_constraintTop_toBottomOf="@+id/instruction"
                tools:text="@string/instruction_detail" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>